# chart_review_with_llms

./: .gitignore  LICENSE  README.md  launch.sh  package-lock.json  pyproject.toml
ehrllm/: utils.py
ehrllm/backend/: wsgi.py
ehrllm/backend/app/: __init__.py  config.py  models.py  routes.py
ehrllm/backend/call_llm_with_retries/: 2025-03-03_01-31-55.json  2025-03-03_01-33-43.json  2025-03-03_01-33-44.json  2025-03-03_01-33-45.json  2025-03-03_01-33-51.json  2025-03-03_01-41-37.json  2025-03-03_01-41-38.json  2025-03-03_01-41-39.json  2025-03-03_01-42-01.json  2025-03-03_01-53-25.json  2025-03-03_01-53-30.json  2025-03-03_01-53-32.json  2025-03-03_01-54-06.json  2025-03-03_01-58-43.json  2025-03-03_01-58-45.json  2025-03-03_01-58-46.json  2025-03-03_01-58-47.json  2025-03-03_01-59-22.json  2025-03-03_02-17-18.json  2025-03-03_02-17-20.json  2025-03-03_02-17-55.json  2025-03-03_02-17-56.json  2025-03-03_02-18-00.json  2025-03-03_02-18-02.json  2025-03-03_03-14-35.json  2025-03-03_03-16-10.json  2025-03-03_03-16-14.json  2025-03-03_03-16-44.json  2025-03-03_03-16-46.json  2025-03-03_03-16-55.json  2025-03-03_03-18-34.json  2025-03-03_03-18-38.json  2025-03-03_03-20-02.json  2025-03-03_03-20-25.json  2025-03-03_03-20-26.json  2025-03-03_03-20-49.json  2025-03-03_03-20-50.json  2025-03-03_03-20-54.json  2025-03-03_03-31-04.json  2025-03-03_03-31-05.json  (+3 more)
ehrllm/frontend/: index.html  package-lock.json  package.json
ehrllm/frontend/src/: App.tsx  index.css
ehrllm/frontend/src/types/: index.ts
ehrllm/llms/: models.py  prompts.py  utils.py
scripts/: find_patients.py
(+21 files in other folders)
